# my-expenses

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  auth.py  config.py  database.py  main.py
api/db/: __init__.py  expenses.py
api/models/: __init__.py  expense.py
api/routers/: __init__.py  expenses.py
bot/: Dockerfile  config.py  main.py
bot/handlers/: __init__.py  commands.py  expense.py  keyboards.py
bot/services/: __init__.py  expenses_api.py  llm_expense_parser.py  llm_parser.py  local_expense_parser.py
database/: init.sql
