[project]
name = "my-expenses"
version = "0.1.0"
description = "Telegram bot for quick expense tracking"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.0.0",
    "fastapi>=0.104.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "uvicorn>=0.24.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.poe.tasks]
dev-bot = "python -m bot.main"
dev-api = "uvicorn api.main:app --reload --host 0.0.0.0 --port 8000"
check = ["ruff check", "pyright"]
format = "ruff format"
lint = "ruff check"
typecheck = "pyright"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"
